--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>Exercice 1 :</h1>
+    <p>Les hommes de plus de 20 ans paient l'impôt. <br>
+    Les femmes paient l'impôt si elles ont entre 18 et 35 ans. <br>
+    Les autres ne paient pas d'impôt. <br>
+    Le programme demandera donc l'âge et le sexe du Zorglubien, et se prononcera donc ensuite sur le fait que l'habitant est imposable ou non.</p>
     <label for="">Quel est votre âge ?</label>
-    <input id="age" type="text"/><br>
+    <input id="age" type="text"/><br><br>
     <label for="">Êtes vous un homme ou une femme ?</label>
-    <input id="sexe" type="text"><br>
-    <button onclick=impots()>Vérifiez si vous êtes imposable ou non</button><br>
+    <input id="sexe" type="text"><br><br>
+    <button onclick=impots()>Vérifiez si vous êtes imposable ou non</button><br><br>
     <input id="input3" type="text">
     <script src="./exo.js"></script>
 </body>
