--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     Les autres ne paient pas d'impôt. <br>
     Le programme demandera donc l'âge et le sexe du Zorglubien, et se prononcera donc ensuite sur le fait que l'habitant est imposable ou non.</p>
     <label for="">Quel est votre âge ?</label>
-    <input id="age" type="text"/><br><br>
+    <input id="age" type="text" placeholder="Votre âge"><br><br>
     <label for="">Êtes vous un homme ou une femme ?</label>
-    <input id="sexe" type="text"><br><br>
+    <input id="sexe" type="text" placeholder="Votre genre"><br><br>
     <button onclick=impots()>Vérifiez si vous êtes imposable ou non</button><br><br>
-    <input id="input3" type="text">
+    <input id="input3" type="text" placeholder="La réponse ici">
     <script src="./exo.js"></script>
 </body>
 </html>
